<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory
        android:title="@string/prefcategory_capturesetting">
        <SwitchPreference
            android:defaultValue="false"
            android:key="segmentation_activate"
            android:title="@string/pref_segmentation"
            android:summary="Set enable/disable segmentation when capture is finished."
            />
        <ListPreference
            android:title="@string/pref_minimumfinger"
            android:defaultValue="0"
            android:entries="@array/minimumfingercount"
            android:entryValues="@array/minimumfingercount_value"
            android:key="minimum_number_of_finger"
            android:summary="@string/pref_minimumfinger_summery"
            />
        <EditTextPreference
            android:title="@string/pref_Capture_Timeout"
            android:key="pref_Capture_Timeout"
            android:summary="Set time out value for capture.(default is 10sec. 0 is infinite.)"
            />
        <ListPreference
            android:title="@string/pref_rolldiection"
            android:defaultValue="0"
            android:key="roll_capture_direction"
            android:entries="@array/roll_direction"
            android:entryValues="@array/roll_direction_value"
            android:summary="Select roll capture direction."
            />
        <ListPreference
            android:title="@string/pref_seqcheckcapturemode"
            android:defaultValue="0"
            android:key="sequence_check_capture_mode"
            android:entries="@array/sequence_check_capture_mode"
            android:entryValues="@array/sequence_check_capture_mode_value"
            android:summary="Select capture mode for sequence check."
            />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/prefcategory_missingfinger">
        <SwitchPreference
            android:defaultValue="false"
            android:key="missingfinger_activate"
            android:title="@string/pref_missingfingerfunction"
            />
<!--        <ListPreference-->
<!--            android:title="@string/pref_hand_select"-->
<!--            android:defaultValue="0"-->
<!--            android:entries="@array/hand_select"-->
<!--            android:entryValues="@array/hand_select_value"-->
<!--            android:key="handselect"-->
<!--            android:summary="@string/pref_hand_select_summery"-->
<!--            />-->

        <androidx.preference.MultiSelectListPreference
            android:title="@string/pref_fingerselect"
            android:defaultValue="@array/empty_array"
            android:entries="@array/fingerselect"
            android:entryValues="@array/fingerselect_value"
            android:key="fingerselect"
            android:summary="@string/pref_fingerselect_summery"
            />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/prefcategory_custom_segmentsize">
        <ListPreference
            android:defaultValue="0"
            android:key="customsegmentsize_activate"
            android:entries="@array/custom_size_capture_mode"
            android:entryValues="@array/custom_size_capture_mode_value"
            android:title="@string/pref_custom_segmentsize_function"
            />
        <androidx.preference.EditTextPreference
            android:title="@string/pref_custom_segmentsize_width"
            android:key="custom_segmentsize_width"
            android:summary="@string/pref_custom_segmentsize_width"
            />
        <androidx.preference.EditTextPreference
            android:title="@string/pref_custom_segmentsize_height"
            android:key="custom_segmentsize_height"
            android:summary="@string/pref_custom_segmentsize_height"
            />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/prefcategory_checkcustomerid"
        android:key="customeridprefcategory">
        <SwitchPreference
            android:defaultValue="false"
            android:key="checkCustomerId"
            android:title="@string/pref_checkCustomerId"
            android:summary="@string/checkCustomerId_function_summery"
            />
        <androidx.preference.EditTextPreference
            android:title="@string/checkCustomerId_title"
            android:key="checkCustomerId_value"
            android:summary="@string/pref_checkCustomerId_value_summery"
            />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/prefcategory_dirtycheck"
        android:key="dirtycheckcategory">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_dirtycheck"
            android:title="@string/pref_dirtycheck"
            android:summary="@string/pref_summery_dirtycheck"
            />
        <EditTextPreference
            android:title="@string/pref_dirtycheck_level"
            android:key="pref_dirtycheck_level"
            android:summary="@string/pref_summery_dirtycheck_level"
            />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/prefcategory_nfiq">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_nfiqmode"
            android:title="@string/pref_nfiqmode"
            android:summary="@string/pref_summery_nfiqmode"
            />
        <Preference
            android:title="@string/pref_nfiq_score"
            android:key="pref_nfiqscore"
            android:summary=""
            />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:key="lfdmodecategory"
        android:title="@string/prefcategory_lfd">
        <EditTextPreference
            android:key="pref_lfdmode"
            android:defaultValue="0"
            android:title="@string/pref_lfdmode"
            android:summary="@string/pref_summery_lfdmode"
            />
        <Preference
            android:title="@string/pref_lfd_score"
            android:key="pref_lfdscore"
            android:summary=""
            />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/prefcategory_generalsetting">
        <ListPreference
            android:title="@string/pref_imageformat"
            android:defaultValue="0"
            android:entries="@array/imageformatlist"
            android:entryValues="@array/imageformatlist_values"
            android:key="imageformat"
            android:summary="@string/pref_summery_imageformat"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_enhancedpreviewmode"
            android:title="@string/pref_enhancedpreviewmode"
            android:summary="@string/pref_summery_useLibUsbMode"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_usbNativeUsbMode"
            android:title="@string/pref_useNativeUsbMode"
            android:summary="@string/pref_summery_useNativeUsbMode"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_captureareaexpandmode"
            android:title="@string/pref_captureareaexpandmode"
            android:summary="@string/pref_summery_captureareaexpandmode"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_haloreductionenhanced"
            android:title="@string/pref_haloreductionenhanced"
            android:summary="@string/pref_summury_haloreductionenhanced"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_supportLowCpuDevice"
            android:title="@string/pref_supportLowCpuDevice"
            android:summary="@string/pref_summery_supportLowCpuDevice"
            />
        <ListPreference
            android:defaultValue="1"
            android:key="pref_previewquality"
            android:entries="@array/preview_qualitry_mode"
            android:entryValues="@array/preview_quality_value"
            android:title="@string/pref_preview_quality"
            />
        <Preference
            android:title="@string/pref_license"
            android:key="pref_license"
            />

    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/prefcategory_LEDsetting"
        android:key="LEDsettingcategory">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_setLed_mode"
            android:title="@string/pref_customLedMode"
            android:summary="@string/pref_summery_customLedMode"
            />
        <com.realscanseries.rssample.ModeLEDPreference
            android:key="mode_led_preference"
            android:title="@string/pref_summary_mode_led_preference_mode"
            android:summary="@string/pref_mode_led_preference_mode" />
        <com.realscanseries.rssample.StatusLEDPreference
            android:key="status_led_preference"
            android:title="@string/pref_summary_status_led_preference_mode"
            android:summary="@string/pref_status_led_preference_mode" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/prefcategory_s60setting"
        android:key="s60settingcategory">
        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_s60Capture_measurement_enable_mode"
            android:title="@string/pref_s60Capture_measurement_enable_mode"
            android:summary="@string/pref_summary_s60Capture_measurement_enable_mode"
            />
        <ListPreference
            android:title="@string/pref_s60Capture_measurement_mode"
            android:defaultValue="0"
            android:entries="@array/s60_ext_bright_calc_mode"
            android:entryValues="@array/s60_ext_bright_calc_mode_values"
            android:key="pref_s60Capture_measurement_mode"
            android:summary="@string/pref_summary_s60Capture_measurement_mode"
            />
        <ListPreference
            android:title="@string/pref_sensitive_mode"
            android:defaultValue="0"
            android:entries="@array/s60_sensitive_mode_level"
            android:entryValues="@array/s60_sensitive_mode_level_values"
            android:key="pref_sensitive_mode"
            android:summary="@string/pref_summery_sensitivemode"
            />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>