<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:weightSum="10"
                android:orientation="vertical"
                android:layout_weight="9.7">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:layout_weight="0.8">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/tv_fullcaptureimage"
                        app:autoSizeTextType="uniform"
                        app:autoSizeStepGranularity="1sp"
                        app:autoSizeMinTextSize="2sp"
                        app:autoSizeMaxTextSize="10sp"
                        android:gravity="center"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/captureInfo"
                    android:orientation="horizontal"
                    android:layout_weight="8">

                    <ImageView
                        android:id="@+id/previewdialog_imageview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/functionInfo"
                    android:layout_below="@id/segmentInfo"
                    android:orientation="horizontal"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:weightSum="10"
                        android:layout_weight="1">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.1"/>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="9.8">
                            <Button
                                android:id="@+id/previewdialog_manualcapture"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:enabled="false"
                                android:background="@drawable/buttonselector"
                                app:autoSizeTextType="uniform"
                                app:autoSizeStepGranularity="1sp"
                                app:autoSizeMinTextSize="2sp"
                                app:autoSizeMaxTextSize="10sp"
                                android:stateListAnimator="@null"
                                android:text="@string/bt_manualcapture" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.1"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:weightSum="10"
                        android:layout_weight="1">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.1"/>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="9.8">
                            <Button
                                android:id="@+id/previewdialog_abortcapture"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/buttonselector"
                                app:autoSizeTextType="uniform"
                                app:autoSizeStepGranularity="1sp"
                                app:autoSizeMinTextSize="2sp"
                                app:autoSizeMaxTextSize="10sp"
                                android:stateListAnimator="@null"
                                android:text="@string/bt_abortcapture" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.1"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>